--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <h1>welcome to SE Quiz</h1>
+    <h1 style='text-align: center;'>welcome to SE Quiz</h1>
     <p>{% for job in jobs %}
          <h2>{{ job['type'] }}</h2>
        {% endfor %}    
