--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
   <body>
     <h1 style='text-align: center;'>welcome to SE Quiz</h1>
     <p>{% for job in jobs %}
-         <h2>{{ job['type'] }}</h2>
+         {% include 'q.html' %}
        {% endfor %}    
     </p>
     <button>Start Quiz</button>
