--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,9 @@
   </head>
   <body>
     <h1 style='text-align: center;'>welcome to SE Quiz</h1>
+    <h2>product -------------------- price</h2>
     <p>{% for p in product %}
-         <p>{{p.name}} ------ {{p.price}}</p>
+         <p>{{p.name}} ---------------------------------- {{p.price}}</p>
           
        {% endfor %}    
     </p>
